Add MCP protocol compliance and tool output validation
Introduces protocol compliance utilities for MCP 2025-06-18, including strict header and JSON-RPC validation, and connection config checks. Adds comprehensive tool output validation to ensure outputs conform to MCP schemas and are sanitized. Updates MCPToolProvider to support output validation, protocol compliance, and user consent management. Enhances HTTP transport to enforce protocol compliance and improves example scripts to load MCP server configs from file. Adds new tests and a TypeScript demo for Tavily MCP integration.

--- a/examples/mcp/mcp_config.json.example
+++ b/examples/mcp/mcp_config.json.example
@@ -9,10 +9,19 @@
       ],
       "transport": "stdio"
     },
-    "duckduckgosearch": {
+    "duckduckgo": {
       "command": "uvx",
       "args": [
         "duckduckgo-mcp-server"
+      ],
+      "transport": "stdio"
+    },
+    "time": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "mcp-remote",
+        "https://mcp.time.mcpcentral.io"
       ],
       "transport": "stdio"
     },
