--- a/deepagents-mcp/pyproject.toml
+++ b/deepagents-mcp/pyproject.toml
@@ -6,8 +6,12 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
+    "cryptography>=45.0.5",
     "deepagents>=0.0.3",
     "langchain-mcp-adapters>=0.1.0",
+    "pyjwt>=2.10.1",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
 ]
 
 [project.optional-dependencies]
